# cursor-driver

./: .gitignore  AGENTS.md  README.md  cursor_driver.py  pyproject.toml
.github/workflows/: ci.yml
migration/: 01-file-backed-prompts.md  agents.md
scripts/: install-skill.sh  lint.sh  setup-venv.sh  test.sh
skills/harness/: SKILL.md  TESTING.md
skills/harness/references/: project-boilerplate.md  script-guide.md
src/cursor_driver/: __init__.py  agent.py  tui_ops.py
tests/: __init__.py  conftest.py  test_agent_integration.py  test_agent_unit.py  test_tui_ops.py
