[project]
name = "cursor-driver"
version = "0.1.0"
description = "Tmux-based orchestration of the Cursor agent CLI"
requires-python = ">=3.10"
dependencies = ["libtmux"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=0"
markers = [
    "integration: live Cursor agent + tmux (requires CURSOR_DRIVER_INTEGRATION=1)",
]
